--- a/Impilo App/Views/FollowUpVisit/FollowUp.xaml
+++ b/Impilo App/Views/FollowUpVisit/FollowUp.xaml
@@ -189,7 +189,7 @@
                                             <Label Content="BP reading (Screening)" HorizontalAlignment="Left" Margin="10,211,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.806,0.539" FontWeight="Bold"/>
                                             <Label Content="Currently on meds" HorizontalAlignment="Left" Margin="10,126,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.375,0.843" FontWeight="Bold"/>
                                             <TextBox HorizontalAlignment="Left" Height="23" Margin="180,83,0,0" Name="txtHyRefNo1" TextWrapping="Wrap" VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
-                                            <DatePicker HorizontalAlignment="Left" Height="23" Margin="180,170,0,0"  VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
+                                            <DatePicker HorizontalAlignment="Left" Height="23" Margin="180,170,0,0" Name="dpHyStartDt" VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
                                             <Label Content="Start date" HorizontalAlignment="Left" Margin="10,167,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.508,2.12"/>
                                             <Label Content="Re-refer to clinic" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.397,-5.26"/>
                                             <Label Content="Referral no." HorizontalAlignment="Left" Margin="10,83,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49"/>
@@ -461,40 +461,40 @@
                                             <Label Content="Went to clinic"
                         						HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,44,0,0" FontWeight="Bold"/>
                                             <Label Content="Difficulty breathing &#xA; and wheezing" HorizontalAlignment="Left" Margin="10,249,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.077,0.383" FontWeight="Bold"/>
-                                            <TextBox HorizontalAlignment="Left" Height="23" Margin="180,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
+                                            <TextBox HorizontalAlignment="Left" Height="23" Margin="180,125,0,0" TextWrapping="Wrap" Name="txtAstRefNo1" VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
                                             <Label Content="re-refer to clinic" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.397,-5.26"/>
                                             <Label Content="Referral no." HorizontalAlignment="Left" Margin="10,122,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49"/>
-                                            <RadioButton GroupName="ep" Content="Yes" HorizontalAlignment="Left" Margin="180,47,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton GroupName="ep" Content="No" HorizontalAlignment="Left" Margin="245,47,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton GroupName="ep1" Content="Yes" HorizontalAlignment="Left" Margin="180,84,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton GroupName="ep1" Content="No" HorizontalAlignment="Left" Margin="245,84,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton Content="Yes" HorizontalAlignment="Left" Margin="180,262,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton Content="No" HorizontalAlignment="Left" Margin="245,262,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton GroupName="ep" Content="Yes" HorizontalAlignment="Left" Margin="180,47,0,0" Name="radAstClinYes" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton GroupName="ep" Content="No" HorizontalAlignment="Left" Margin="245,47,0,0" Name="radAstClinNo" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton GroupName="ep1" Content="Yes" HorizontalAlignment="Left" Margin="180,84,0,0" Name="radAstReRefClinYes" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton GroupName="ep1" Content="No" HorizontalAlignment="Left" Margin="245,84,0,0" Name="radAstReRefClinNo" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton Content="Yes" HorizontalAlignment="Left" Margin="180,262,0,0" Name="radAstDiffBreathingYes" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton Content="No" HorizontalAlignment="Left" Margin="245,262,0,0" Name="radAstDiffBreathingNo" VerticalAlignment="Top" FontWeight="Bold"/>
                                             <Label Content="Date of visit"
                                             	HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" FontWeight="Bold"/>
-                                            <DatePicker HorizontalAlignment="Left" Height="23" Margin="180,10,0,0" VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
+                                            <DatePicker HorizontalAlignment="Left" Height="23" Margin="180,10,0,0" Name="dpAstVisitDt" VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
                                             <Label Content="Currently on meds"
                                             	HorizontalAlignment="Left" VerticalAlignment="Top" Margin="11,162,0,0" FontWeight="Bold"/>
-                                            <DatePicker HorizontalAlignment="Left" Height="23" Margin="181,207,0,0" VerticalAlignment="Top" Width="263" FontWeight="Bold"/>
+                                            <DatePicker HorizontalAlignment="Left" Height="23" Margin="181,207,0,0" Name="dpAstStartDt" VerticalAlignment="Top" Width="263" FontWeight="Bold"/>
                                             <Label Content="Start date" HorizontalAlignment="Left" Margin="12,207,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton GroupName="ep4" Content="Yes" HorizontalAlignment="Left" Margin="181,168,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton GroupName="ep4" Content="No" HorizontalAlignment="Left" Margin="246,168,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton GroupName="ep4" Content="Yes" HorizontalAlignment="Left" Margin="181,168,0,0" Name="radAstCurMedsYes" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton GroupName="ep4" Content="No" HorizontalAlignment="Left" Margin="246,168,0,0" Name="radAstCurMedsNo" VerticalAlignment="Top" FontWeight="Bold"/>
                                             <Label Content="Increased no. &#xA;of asthma attacks" HorizontalAlignment="Left" Margin="10,292,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton GroupName="ep6" Content="Yes" HorizontalAlignment="Left" Margin="182,298,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton GroupName="ep6" Content="No" HorizontalAlignment="Left" Margin="247,298,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton GroupName="ep6" Content="Yes" HorizontalAlignment="Left" Margin="182,298,0,0" Name="radAstIncrAttacksYes" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton GroupName="ep6" Content="No" HorizontalAlignment="Left" Margin="247,298,0,0" Name="radAstIncrAttacksNo" VerticalAlignment="Top" FontWeight="Bold"/>
                                         </Grid>
                                     </GroupBox>
                                     <GroupBox Header="Clinic referral" HorizontalAlignment="Left"
                                     	VerticalAlignment="Top" Height="167" Width="465" Margin="476,10,0,0">
                                         <Grid HorizontalAlignment="Left" Height="133" VerticalAlignment="Top"
                                     		Width="445" Margin="10,0,-3,0">
-                                            <TextBox HorizontalAlignment="Left" Height="23" Margin="159,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
+                                            <TextBox HorizontalAlignment="Left" Height="23" Margin="159,45,0,0" TextWrapping="Wrap" Name="txtAsthRefNo2" VerticalAlignment="Top" Width="256" FontWeight="Bold"/>
                                             <Label Content="Re-refer to clinic" HorizontalAlignment="Left" Margin="0,8,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.397,-5.26"/>
                                             <Label Content="Referral no." HorizontalAlignment="Left" Margin="0,42,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49"/>
-                                            <RadioButton Content="Yes" HorizontalAlignment="Left" Margin="159,13,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <RadioButton Content="No" HorizontalAlignment="Left" Margin="224,13,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton Content="Yes" HorizontalAlignment="Left" Margin="159,13,0,0" Name="radAsthClinRefYes" VerticalAlignment="Top" FontWeight="Bold"/>
+                                            <RadioButton Content="No" HorizontalAlignment="Left" Margin="224,13,0,0" Name="radAsthClinRefNo" VerticalAlignment="Top" FontWeight="Bold"/>
                                             <Label Content="Medication" HorizontalAlignment="Left" Margin="2,97,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-                                            <ComboBox HorizontalAlignment="Left" Margin="159,100,0,0" VerticalAlignment="Top" Width="263">
+                                            <ComboBox HorizontalAlignment="Left" Margin="159,100,0,0" Name="cboAsthMeds" VerticalAlignment="Top" Width="263">
                                                 <ComboBoxItem ContentStringFormat="Name"/>
                                                 <ComboBoxItem x:Name="m18" Content="Salbutamol, asthavent"/>
                                                 <ComboBoxItem x:Name="m19" Content="Beclamethasone, Beclometasone, Beclate"/>
